gccida/g1/asm_operand_ok
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/asm_operand_ok/src/recog.c:2153:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( ( unsigned __int8 *)constraint + 1)] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/asm_operand_ok/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/asm_operand_ok/src/recog.c:2157:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[*( unsigned __int8 *)v4] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/asm_operand_ok/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/asm_operand_ok/src/recog.c:2201:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)op->fld[0]; 
                      ^~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/asm_operand_ok/src/obj/recog.o] Error 1
